--- a/.vscode/vex_project_settings.json
+++ b/.vscode/vex_project_settings.json
@@ -4,7 +4,7 @@
 		"json": 2
 	},
 	"project": {
-		"name": "LiftBot",
+		"name": "OWN",
 		"description": "",
 		"creationDate": "9/19/2023, 6:22:50 PM",
 		"platform": "V5",
