--- a/.vscode/vex_project_settings.json
+++ b/.vscode/vex_project_settings.json
@@ -4,12 +4,12 @@
 		"json": 2
 	},
 	"project": {
-		"name": "Flip",
+		"name": "PID_T",
 		"description": "",
 		"creationDate": "9/19/2023, 6:22:50 PM",
 		"platform": "V5",
 		"language": "cpp",
-		"slot": 3,
+		"slot": 4,
 		"sdkVersion": "V5_20220726_10_00_00",
 		"cpp": {
 			"includePath": [],
